--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -76,6 +76,30 @@
                             </a>
                         </li>
                         <li class="nav-item active">
+                            <a href="/Admin/Catagory">
+                                <span class="icon-holder">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <span class="title">دسته بندی ها</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Playlist">
+                                <span class="icon-holder">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <span class="title"> کلاس ها</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="/Admin/Video">
+                                <span class="icon-holder">
+                                    <i class="fas fa-user"></i>
+                                </span>
+                                <span class="title"> ویدیوها ها</span>
+                            </a>
+                        </li>
+                        <li class="nav-item active">
                             <a href="/Admin/Ticket">
                                 <span class="icon-holder">
                                     <i class="fas fa-ticket-alt"></i>
