--- a/AminWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/Index.cshtml
@@ -35,7 +35,7 @@
                                     <option value="0">کاربران</option>
                                     <option value="1">مربی </option>
                                     <option value="2">آموزشگاه</option>
-                                    <option value="2">مربی</option>
+                                    <option value="3">مدیر</option>
                                 </select>
                             </div>
                         </div>
