--- a/AminWeb/Areas/User/Views/Account/AccountCompletion.cshtml
+++ b/AminWeb/Areas/User/Views/Account/AccountCompletion.cshtml
@@ -1,8 +1,121 @@
-﻿
+﻿@model DataLayer.MetaData.MdDoc
 @{
     ViewBag.Title = "AccountCompletion";
     Layout = "~/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<h2>AccountCompletion</h2>
 
+
+<div class="mat uk-padding uk-box-shadow-small uk-margin-xlarge-bottom">
+    @using (Html.BeginForm("Create", "Video", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <h3>
+            آپلود ویدیو جدید
+        </h3>
+        <div class="form-group">
+            <label for="Title">تیتر ویدیو</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.Title)
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+
+        <div class="form-group">
+            <label for="MainImage">عکس</label>
+            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle">عکس خود را اینجا بیاندازید و یا</span>
+                <div uk-form-custom>
+                    <input type="file" name="MainImage">
+                    <span class="blue">کلیک کنید</span>
+                </div>
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.MainImage, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+        <div class="form-group">
+            <label for="VideoDemo">دموی ویدیو</label>
+            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle"> دموی ویدیو خود را اینجا بیاندازید و یا</span>
+                <div uk-form-custom>
+                    <input type="file" name="VideoDemoUrl">
+                    <span class="blue">کلیک کنید</span>
+                </div>
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.VideoDemoUrl, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+
+
+        <div class="form-group">
+            <label for="Video">ویدیو</label>
+            <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
+                <span uk-icon="icon: cloud-upload"></span>
+                <span class="uk-text-middle">ویدیو خود را اینجا بیاندازید و یا</span>
+                <div uk-form-custom>
+                    <input type="file" name="VideoUrl">
+                    <span class="blue">کلیک کنید</span>
+                </div>
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.VideoUrl, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+
+
+        <div class="form-group">
+            <label for="Description">توضیحات</label>
+            @Html.EditorFor(m => m.Description)
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+
+        <div class="form-group">
+            <label for="Price">قیمت به تومان</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.Price)
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "uk-text-danger" })
+            </span>
+        </div>
+
+        <div class="uk-margin-top uk-margin-bottom">
+            <label dir="rtl">
+                @Html.EditorFor(m => m.IsCharity)
+                میخواهم درصدی از درامد این ویدیو به خیریه
+                <a href="#" class="blue">نام خیریه</a>
+                اهدا شود
+            </label>
+        </div>
+
+        <div class="form-group">
+            <label for="Playlist">کلاس</label>
+            <div class="row-reverse">
+                @Html.DropDownListFor(model => model.PlaylistId, (IEnumerable<SelectListItem>)ViewBag.PlaylistId, "کلاس مورد نظر", htmlAttributes: new { @class = "uk-width-2-3 uk-margin-small-left showPlaylist", dir = "rtl", onchange = "showPlaylist()" })
+                <a href="/User/Classes/Create" uk-icon="plus" uk-tooltip="اضافه کردن کلاس جدید" class="uk-margin-auto-right"></a>
+            </div>
+            @Html.ValidationMessageFor(model => model.PlaylistId, "", new { @class = "uk-text-danger" })
+        </div>
+        <div class="form-group">
+            <label for="Keywords">کلمات کلیدی</label>
+            <div class="input-group">
+                @Html.EditorFor(m => m.Keywords, new { htmlAttributes = new { placeholder = "کلمات کلیدی را با ، جدا کنید" } })
+            </div>
+            <span role="alert" class="alert">
+                @Html.ValidationMessageFor(model => model.Keywords, "", new { @class = "uk-text-danger", placholder = "لطفا با ، کلمات را از هم جدا کنید" })
+            </span>
+        </div>
+        <div class="row-reverse uk-margin-medium-top">
+            <button class="btn-primary">
+                آپلود
+            </button>
+        </div>
+    }
+</div>
