--- a/AminWeb/Areas/Admin/Views/Catagory/SubCategory.cshtml
+++ b/AminWeb/Areas/Admin/Views/Catagory/SubCategory.cshtml
@@ -1,5 +1,4 @@
 ﻿
-@model IEnumerable<DataLayer.Models.TblPlaylist>
 
 <div id="card-table" class="p-0 card-body flex-div">
     <div class="table-responsive flex">
@@ -14,34 +13,8 @@
                 </tr>
             </thead>
 
-            <tbody id="listCat" class="list-wrapper">
-                @if (Model.Any())
-                {
-                    foreach (var item in Model)
-                    {
-                        <tr id="cat_@item.PlaylistId" class="list-item">
-                            <td>@(Model.ToList().IndexOf(item)+1)</td>
-                            <td>
-                                @item.Title
-                            </td>
-                            <td>
-                                @if (item.IsActive)
-                                {
-                                    <a href="#" onclick="activeDisableUser(@item.PlaylistId)" class="badge-success badge-pill">بله</a>
-                                }
-                                else
-                                {
-                                    <a href="#" onclick="activeDisableUser(@item.PlaylistId)" class="badge-danger badge-pill">خیر</a>
-                                }
-                            </td>
-                            <td>
-                                <span data-placement="top" data-toggle="tooltip" title="" data-original-title="حذف">
-                                    <a onclick="deletePlaylistId(@item.PlaylistId)" data-toggle="modal" data-target="#modalSave"><i class="btn fas fa-trash mr-2 text-danger"></i></a>
-                                </span>
-                            </td>
-                        </tr>
-                    }
-                }
+            <tbody id="listPlaylist" class="list-wrapper">
+                @Html.Action("SubCategorys", "Catagory")
             </tbody>
         </table>
     </div>
