--- a/AminWeb/Views/Home/Index.cshtml
+++ b/AminWeb/Views/Home/Index.cshtml
@@ -53,17 +53,12 @@
         <div role="none" class="remove-at-mobile uk-margin-small-left">
             <div role="none" class="side-category-placeholder"></div>
             <aside role="menu" class="side-category column" uk-sticky="offset: 100">
-                <h4>
-                    دسته بندی ها
-                </h4>
-                <div class="search-box row uk-margin-small-bottom">
-                    <button uk-icon="search"></button>
-                    <label for="CategorySearch" class="collapsed">جستجو دسته بندی</label>
-                    <input dir="rtl" type="text" placeholder="جستجو..." name="CategorySearch" />
-                </div>
+
+
+                @Html.Action("Index", "Category")
+
 
                 @*
-
                     <details dir="rtl">
                         <summary>دسته بندی</summary>
                         <div class="column uk-margin-small-right">
@@ -71,45 +66,25 @@
                             <a href="#">آیتم</a>
                         </div>
                     </details>
-
                 *@
 
-                <details dir="rtl">
-                    <summary>دسته بندی</summary>
-                    <div class="uk-margin-right column">
-                        <details dir="rtl">
-                            <summary>دسته بندی</summary>
-                            <div class="uk-margin-right column">
-                                <details dir="rtl">
-                                    <summary>دسته بندی</summary>
-                                    <div class="column uk-margin-small-right">
-                                        <a href="#">آیتم</a>
-                                        <a href="#">آیتم</a>
-                                    </div>
-                                </details>
-                                <a href="#">آیتم</a>
-                                <a href="#">آیتم</a>
-                                <a href="#">آیتم</a>
-                            </div>
-                        </details>
-                        <a href="#">آیتم</a>
-                        <a href="#">آیتم</a>
-                    </div>
-                </details>
+
             </aside>
         </div>
-        <div class="video-grid flex-1">
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
-            @Html.Partial("_VideoBlock")
+        <div class="video-grid flex-1" id="listVideo">
+            @Html.Action("ListVideos", "Video")
         </div>
     </content>
 </div>
+
+
+<script>
+    function selectByCategory(id) {
+        $("#overlay").fadeIn(100);
+        $.get('/Video/SelectVideosByCategory/' + id, function (result) {
+            $('#listVideo').html(result);
+            $("#overlay").fadeOut(300);
+        });
+        $("#overlay").fadeOut(300);
+    }
+</script>
