--- a/AminWeb/Views/Home/Index.cshtml
+++ b/AminWeb/Views/Home/Index.cshtml
@@ -26,7 +26,10 @@
     <div role="search" class="search-box row uk-margin-auto">
         <button class="search" uk-icon="icon:search;ratio:1.2"></button>
         <label for="Search" class="collapsed">جستجو</label>
-        <input type="text" name="Search" placeholder="جستجو..." dir="rtl" />
+        <input autocomplete="off" oninput="txtTypeChanged(this.value)" id="txtCategory" type="text" name="Search" placeholder="جستجو..." dir="rtl" />
+        <div class="category-drop mat" uk-drop="mode: none; pos: bottom-justify">
+            <ul class="uk-padding-remove uk-margin-remove" id="drop"></ul>
+        </div>
         <button class="filter uk-margin-small-left" uk-icon="icon:chevron-down;ratio:1.5"></button>
         <div uk-drop="pos: bottom-right; boundary: .search-box">
             <div class="drop-body uk-padding-small column">
@@ -52,11 +55,9 @@
     <content class="row-reverse uk-margin-medium-top">
         <div role="none" class="remove-at-mobile uk-margin-small-left">
             <div role="none" class="side-category-placeholder"></div>
-            <aside role="menu" class="side-category column" uk-sticky="offset: 100">
-
+            <aside role="menu" class="side-category column" uk-sticky="offset: 80">
 
                 @Html.Action("Index", "Category")
-
 
                 @*
                     <details dir="rtl">
@@ -77,7 +78,6 @@
     </content>
 </div>
 
-
 <script>
     function selectByCategory(id) {
         $("#overlay").fadeIn(100);
@@ -87,4 +87,44 @@
         });
         $("#overlay").fadeOut(300);
     }
+</script>
+
+<script>
+
+    const videoNames = [
+        'کافه',
+        'رستوران',
+        'فست فود',
+        'فود',
+        'دونر',
+        'نوتلا'
+    ];
+
+    function txtTypeChanged(val) {
+        val = val.trim();
+        const drop = document.getElementById('drop');
+        const catdrop = UIkit.drop(document.getElementsByClassName('category-drop')[0]);
+
+        if (val === '' || val === ' ') {
+            catdrop.hide();
+            return;
+        }
+
+        catdrop.show();
+
+        drop.innerHTML = '';
+        for (let vid of videoNames.filter(i => i.includes(val))) {
+            const li = document.createElement('li');
+            li.innerHTML = vid.replace(val, `<b>${val}</b>`);
+            li.addEventListener('click', () => {
+                document.getElementById('txtCategory').value = vid;
+                catdrop.hide(0);
+            });
+            drop.appendChild(li);
+        }
+        if (drop.children.length == 0) {
+            catdrop.hide(0);
+        }
+    }
+
 </script>
